--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,11 @@
   },
   "require": {
     "php": ">=8.4",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "firebase/php-jwt": "^6.11",
+    "nikic/fast-route": "^1.3"
+  },
+  "require-dev": {
+    "roave/security-advisories": "dev-latest"
   }
 }
